[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/characters/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/characters/spider/state/idle.gd" type="Script" id=2]
[ext_resource path="res://src/characters/spider/ara√±a3.png" type="Texture" id=3]
[ext_resource path="res://src/characters/spider/walk.gd" type="Script" id=4]
[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=5]
[ext_resource path="res://src/util/color/palette_client.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/characters/spider/state/corner.gd" type="Script" id=7]
[ext_resource path="res://src/characters/spider/state/corner_concave.gd" type="Script" id=8]
[ext_resource path="res://src/pelota/claw.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/characters/spider/state/air.gd" type="Script" id=10]
[ext_resource path="res://src/characters/spider/stick_to_wall.gd" type="Script" id=11]
[ext_resource path="res://src/characters/spider/state/air_closed.gd" type="Script" id=12]
[ext_resource path="res://assets/texture/A.png" type="Texture" id=13]
[ext_resource path="res://src/characters/spider/jump.gd" type="Script" id=14]

[sub_resource type="Image" id=70]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 252, 252, 252, 255, 60, 188, 252, 255, 0, 112, 236, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=64]
flags = 0
flags = 0
image = SubResource( 70 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=65]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 64 )

[sub_resource type="Animation" id=13]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=63]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9.0 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10.0 ]
}

[sub_resource type="Animation" id=1]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 2.4
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("state_machine/walk")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ 3.0 ],
"method": "advance"
}, {
"args": [ 1.0 ],
"method": "advance"
}, {
"args": [ 3.0 ],
"method": "advance"
}, {
"args": [ 3.0 ],
"method": "advance"
}, {
"args": [ 1.0 ],
"method": "advance"
}, {
"args": [ 3.0 ],
"method": "advance"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/Sprite:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot/Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("pivot/Sprite:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3.0, 4.0, 5.0, 6.0, 7.0, 8.0 ]
}

[sub_resource type="Image" id=71]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 227, 99, 255, 255, 57, 8, 255, 0, 0, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=68]
flags = 0
flags = 0
image = SubResource( 71 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=69]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 68 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 6 )

[node name="spider" instance=ExtResource( 1 )]
material = SubResource( 65 )
collision_layer = 2
gravity = Vector2( 0, 250 )

[node name="state_machine" parent="." index="0"]
start_state = "idle"

[node name="idle" type="Node" parent="state_machine" index="0"]
script = ExtResource( 2 )
animation = "idle"
jump_speed = 250.0

[node name="air" type="Node" parent="state_machine" index="1"]
script = ExtResource( 10 )
animation = "air"

[node name="air_closed" type="Node" parent="state_machine" index="2"]
script = ExtResource( 12 )
animation = "air_closed"

[node name="corner" type="Node" parent="state_machine" index="3"]
script = ExtResource( 7 )
animation = "corner"
jump_speed = 250.0

[node name="corner_concave" type="Node" parent="state_machine" index="4"]
script = ExtResource( 8 )
animation = "corner_concave"
jump_speed = 250.0

[node name="walk" type="Node" parent="state_machine" index="5"]
script = ExtResource( 4 )
animation = "walk"
jump_speed = 250.0

[node name="animation_player" parent="." index="1"]
playback_speed = 32.0
method_call_mode = 1
anims/RESET = SubResource( 13 )
anims/air = SubResource( 4 )
anims/air_closed = SubResource( 63 )
anims/corner = SubResource( 9 )
anims/corner_concave = SubResource( 11 )
anims/idle = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="pivot" parent="." index="3"]
use_parent_material = true
position = Vector2( 0, 2 )

[node name="Sprite" type="Sprite" parent="pivot" index="0"]
visible = false
use_parent_material = true
position = Vector2( 0, -2 )
texture = ExtResource( 3 )
hframes = 4
vframes = 3
frame = 2
__meta__ = {
"_editor_description_": "YXNlcHJpdGVfd2l6YXJkX2NvbmZpZwpwbGF5ZXJ8PWFuaW1hdGlvbl9wbGF5ZXIKc291cmNlfD1yZXM6Ly9hc3NldHMvYXNlcHJpdGUvYXJhw7FhMy5hc2Vwcml0ZQpsYXllcnw9Cm9wX2V4cHw9RmFsc2UKb19mb2xkZXJ8PQpvX25hbWV8PQpvbmx5X3Zpc2libGV8PUZhbHNlCm9fZXhfcHw9Cg=="
}

[node name="no_more_floor_detect" type="RayCast2D" parent="pivot" index="1"]
unique_name_in_owner = true
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="corner_detect" type="RayCast2D" parent="pivot" index="2"]
unique_name_in_owner = true
position = Vector2( -1, 7 )
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 7 )

[node name="jump" type="Node2D" parent="pivot" index="3"]
position = Vector2( 0, -2 )
rotation = -1.5708
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="pivot/jump" index="0"]
material = SubResource( 69 )
texture = ExtResource( 13 )
hframes = 2

[node name="palette_client" parent="pivot/jump/Sprite" index="0" instance=ExtResource( 6 )]
type = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="palette_client" parent="." index="5" instance=ExtResource( 6 )]
type = 1
index = 5

[node name="claw" parent="." index="6" instance=ExtResource( 9 )]
material = SubResource( 69 )
distance_from_wearer = 8.0

[node name="stick_to_wall" type="Node" parent="." index="7"]
unique_name_in_owner = true
process_priority = 1
script = ExtResource( 11 )

[connection signal="post_move" from="." to="stick_to_wall" method="trigger"]
[connection signal="pre_move" from="." to="stick_to_wall" method="trigger"]
